hphp/hack/test/typecheck/stdclass_static_members.php
<?hh

function test(): void {
  stdClass::$staticProp = 10;
}
